horizontal scroll fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+body{
+    overflow-x: hidden;
+}
 .header-text{
     margin-top: 100px;
 }
